2o/2ostadio.output
Grammar

    0 $accept: program "End Of File"

    1 program: header declarations subprograms comp_statement "."

    2 header: "Program" "Id" ";"

    3 declarations: constdefs typedefs vardefs

    4 constdefs: "Const" constant_defs ";"
    5          | %empty

    6 constant_defs: constant_defs ";" "Id" "=" expression
    7              | "Id" "=" expression
    8              | "Id" error

    9 expression: expression "> | >= | < | <= | <>" expression
   10           | expression "=" expression
   11           | expression "In" expression
   12           | expression "Or" expression
   13           | expression "+ | -" expression
   14           | expression "* | / | Mod | Div | And" expression
   15           | "+ | -" expression
   16           | "Not" expression
   17           | variable
   18           | "Id" "(" expressions ")"
   19           | "Length" "(" expression ")"
   20           | "New" "(" expression ")"
   21           | constant
   22           | "(" expression ")"
   23           | setlistexpression

   24 variable: "Id"
   25         | variable "." "Id"
   26         | variable "[" expressions "]"
   27         | "Listfunction" "(" expression ")"

   28 expressions: expressions "," expression
   29            | expression

   30 constant: "Iconst"
   31         | "Rconst"
   32         | "Bconst"
   33         | "Cconst"

   34 setlistexpression: "[" expressions "]"
   35                  | "[" "]"

   36 typedefs: "Type" type_defs ";"
   37         | %empty

   38 type_defs: type_defs ";" "Id" "=" type_def
   39          | "Id" "=" type_def

   40 type_def: "Array" "[" dims "]" "Of" typename
   41         | "List" "Of" typename
   42         | "Set" "Of" typename
   43         | "Record" fields "End"
   44         | limit ".." limit

   45 dims: dims "," limits
   46     | limits

   47 limits: limit ".." limit
   48       | "Id"

   49 limit: sign "Iconst"
   50      | "Cconst"
   51      | "Bconst"
   52      | "+ | -" "Id"
   53      | "Id"

   54 sign: "+ | -"
   55     | %empty

   56 typename: standard_type
   57         | "Id"

   58 standard_type: "Integer"
   59              | "Real"
   60              | "Boolean"
   61              | "Char"

   62 fields: fields ";" field
   63       | field

   64 field: identifiers ":" typename

   65 identifiers: identifiers "," "Id"
   66            | "Id"
   67            | error

   68 vardefs: "Var" variable_defs ";"
   69        | %empty

   70 variable_defs: variable_defs ";" identifiers ":" typename
   71              | identifiers ":" typename

   72 $@1: %empty

   73 subprograms: subprograms $@1 subprogram ";"
   74            | %empty

   75 subprogram: sub_header ";" "Forward"
   76           | sub_header ";" declarations subprograms comp_statement
   77           | sub_header ";" error

   78 sub_header: "Function" "Id" formal_parameters ":" standard_type
   79           | "Function" "Id" formal_parameters ":" "List"
   80           | "Procedure" "Id" formal_parameters
   81           | "Function" "Id"

   82 formal_parameters: "(" parameter_list ")"
   83                  | %empty

   84 parameter_list: parameter_list ";" pass identifiers ":" typename
   85               | pass identifiers ":" typename

   86 pass: "Var"
   87     | %empty

   88 comp_statement: "Begin" statements "End"

   89 statements: statements ";" statement
   90           | statement

   91 statement: assignment
   92          | if_statement
   93          | case_statement
   94          | while_statement
   95          | for_statement
   96          | with_statement
   97          | subprogram_call
   98          | io_statement
   99          | comp_statement
  100          | %empty

  101 assignment: variable ":=" expression
  102           | variable ":=" "String"

  103 $@2: %empty

  104 if_statement: "If" expression "Then" $@2 statement if_tail
  105             | "If" expression error

  106 $@3: %empty

  107 if_tail: "Else" $@3 statement
  108        | %empty

  109 case_statement: "Case" expression "Of" cases case_tail "End"

  110 cases: cases ";" single_case
  111      | single_case

  112 single_case: label_list ":" statement
  113            | %empty

  114 label_list: label_list "," label
  115           | label

  116 label: sign constant
  117      | sign "Id"

  118 case_tail: ";" "Otherwise" ":" statement
  119          | %empty

  120 $@4: %empty

  121 while_statement: "While" expression "Do" $@4 statement

  122 $@5: %empty

  123 $@6: %empty

  124 for_statement: "For" "Id" ":=" iter_space "Do" $@5 statement $@6
  125              | "For" error

  126 iter_space: expression "To" expression
  127           | expression "Downto" expression

  128 with_statement: "With" variable "Do" statement

  129 subprogram_call: "Id"
  130                | "Id" "(" expressions ")"

  131 io_statement: "Read" "(" read_list ")"
  132             | "Write" "(" write_list ")"

  133 read_list: read_list "," read_item
  134          | read_item

  135 read_item: variable

  136 write_list: write_list "," write_item
  137           | write_item

  138 write_item: expression
  139           | "String"


Terminals, with rules where they appear

    "End Of File" <stringval> (0) 0
    error (256) 8 67 77 105 125
    "Program" <stringval> (258) 2
    "Const" <stringval> (259) 4
    "Type" <stringval> (260) 36
    "Array" <stringval> (261) 40
    "List" <stringval> (262) 41 79
    "Set" <stringval> (263) 42
    "Of" <stringval> (264) 40 41 42 109
    "Record" <stringval> (265) 43
    "Var" <stringval> (266) 68 86
    "Function" <stringval> (267) 78 79 81
    "Procedure" <stringval> (268) 80
    "Integer" <stringval> (269) 58
    "Real" <stringval> (270) 59
    "Boolean" <stringval> (271) 60
    "Char" <stringval> (272) 61
    "Forward" <stringval> (273) 75
    "Length" <stringval> (274) 19
    "New" <stringval> (275) 20
    "Begin" <stringval> (276) 88
    "End" <stringval> (277) 43 88 109
    "If" <stringval> (278) 104 105
    "Then" <stringval> (279) 104
    "Else" <stringval> (280) 107
    "While" <stringval> (281) 121
    "Do" <stringval> (282) 121 124 128
    "Case" <stringval> (283) 109
    "Otherwise" <stringval> (284) 118
    "For" <stringval> (285) 124 125
    "To" <stringval> (286) 126
    "Downto" <stringval> (287) 127
    "With" <stringval> (288) 128
    "Read" <stringval> (289) 131
    "Write" <stringval> (290) 132
    "Id" <stringval> (291) 2 6 7 8 18 24 25 38 39 48 52 53 57 65 66 78 79 80 81 117 124 129 130
    "Iconst" <akeraiosval> (292) 30 49
    "Rconst" <pragmatikosval> (293) 31
    "Bconst" <stringval> (294) 32 51
    "Cconst" <stringval> (295) 33 50
    "> | >= | < | <= | <>" <stringval> (296) 9
    "+ | -" <stringval> (297) 13 15 52 54
    "Or" <stringval> (298) 12
    "* | / | Mod | Div | And" <stringval> (299) 14
    "Not" <stringval> (300) 16
    "In" <stringval> (301) 11
    "Listfunction" <stringval> (302) 27
    "String" <stringval> (303) 102 139
    "(" <stringval> (304) 18 19 20 22 27 82 130 131 132
    ")" <stringval> (305) 18 19 20 22 27 82 130 131 132
    ";" <stringval> (306) 2 4 6 36 38 62 68 70 73 75 76 77 84 89 110 118
    "." <stringval> (307) 1 25
    "," <stringval> (308) 28 45 65 114 133 136
    "=" <stringval> (309) 6 7 10 38 39
    ":" <stringval> (310) 64 70 71 78 79 84 85 112 118
    "[" <stringval> (311) 26 34 35 40
    "]" <stringval> (312) 26 34 35 40
    ":=" <stringval> (313) 101 102 124
    ".." <stringval> (314) 44 47
    jekremastoelse (315)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    program (62)
        on left: 1
        on right: 0
    header (63)
        on left: 2
        on right: 1
    declarations (64)
        on left: 3
        on right: 1 76
    constdefs (65)
        on left: 4 5
        on right: 3
    constant_defs (66)
        on left: 6 7 8
        on right: 4 6
    expression (67)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 6 7 9 10 11 12 13 14 15 16 19 20 22 27 28 29 101 104 105 109 121 126 127 138
    variable (68)
        on left: 24 25 26 27
        on right: 17 25 26 101 102 128 135
    expressions (69)
        on left: 28 29
        on right: 18 26 28 34 130
    constant (70)
        on left: 30 31 32 33
        on right: 21 116
    setlistexpression (71)
        on left: 34 35
        on right: 23
    typedefs (72)
        on left: 36 37
        on right: 3
    type_defs (73)
        on left: 38 39
        on right: 36 38
    type_def (74)
        on left: 40 41 42 43 44
        on right: 38 39
    dims (75)
        on left: 45 46
        on right: 40 45
    limits (76)
        on left: 47 48
        on right: 45 46
    limit (77)
        on left: 49 50 51 52 53
        on right: 44 47
    sign (78)
        on left: 54 55
        on right: 49 116 117
    typename (79)
        on left: 56 57
        on right: 40 41 42 64 70 71 84 85
    standard_type (80)
        on left: 58 59 60 61
        on right: 56 78
    fields (81)
        on left: 62 63
        on right: 43 62
    field (82)
        on left: 64
        on right: 62 63
    identifiers (83)
        on left: 65 66 67
        on right: 64 65 70 71 84 85
    vardefs (84)
        on left: 68 69
        on right: 3
    variable_defs (85)
        on left: 70 71
        on right: 68 70
    subprograms (86)
        on left: 73 74
        on right: 1 73 76
    $@1 (87)
        on left: 72
        on right: 73
    subprogram (88)
        on left: 75 76 77
        on right: 73
    sub_header (89)
        on left: 78 79 80 81
        on right: 75 76 77
    formal_parameters (90)
        on left: 82 83
        on right: 78 79 80
    parameter_list (91)
        on left: 84 85
        on right: 82 84
    pass (92)
        on left: 86 87
        on right: 84 85
    comp_statement (93)
        on left: 88
        on right: 1 76 99
    statements (94)
        on left: 89 90
        on right: 88 89
    statement (95)
        on left: 91 92 93 94 95 96 97 98 99 100
        on right: 89 90 104 107 112 118 121 124 128
    assignment (96)
        on left: 101 102
        on right: 91
    if_statement (97)
        on left: 104 105
        on right: 92
    $@2 (98)
        on left: 103
        on right: 104
    if_tail (99)
        on left: 107 108
        on right: 104
    $@3 (100)
        on left: 106
        on right: 107
    case_statement (101)
        on left: 109
        on right: 93
    cases (102)
        on left: 110 111
        on right: 109 110
    single_case (103)
        on left: 112 113
        on right: 110 111
    label_list (104)
        on left: 114 115
        on right: 112 114
    label (105)
        on left: 116 117
        on right: 114 115
    case_tail (106)
        on left: 118 119
        on right: 109
    while_statement (107)
        on left: 121
        on right: 94
    $@4 (108)
        on left: 120
        on right: 121
    for_statement (109)
        on left: 124 125
        on right: 95
    $@5 (110)
        on left: 122
        on right: 124
    $@6 (111)
        on left: 123
        on right: 124
    iter_space (112)
        on left: 126 127
        on right: 124
    with_statement (113)
        on left: 128
        on right: 96
    subprogram_call (114)
        on left: 129 130
        on right: 97
    io_statement (115)
        on left: 131 132
        on right: 98
    read_list (116)
        on left: 133 134
        on right: 131 133
    read_item (117)
        on left: 135
        on right: 133 134
    write_list (118)
        on left: 136 137
        on right: 132 136
    write_item (119)
        on left: 138 139
        on right: 136 137


State 0

    0 $accept: . program "End Of File"

    "Program"  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    2 header: "Program" . "Id" ";"

    "Id"  shift, and go to state 4


State 2

    0 $accept: program . "End Of File"

    "End Of File"  shift, and go to state 5


State 3

    1 program: header . declarations subprograms comp_statement "."

    "Const"  shift, and go to state 6

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    2 header: "Program" "Id" . ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: program "End Of File" .

    $default  accept


State 6

    4 constdefs: "Const" . constant_defs ";"

    "Id"  shift, and go to state 10

    constant_defs  go to state 11


State 7

    1 program: header declarations . subprograms comp_statement "."

    $default  reduce using rule 74 (subprograms)

    subprograms  go to state 12


State 8

    3 declarations: constdefs . typedefs vardefs

    "Type"  shift, and go to state 13

    $default  reduce using rule 37 (typedefs)

    typedefs  go to state 14


State 9

    2 header: "Program" "Id" ";" .

    $default  reduce using rule 2 (header)


State 10

    7 constant_defs: "Id" . "=" expression
    8              | "Id" . error

    error  shift, and go to state 15
    "="    shift, and go to state 16


State 11

    4 constdefs: "Const" constant_defs . ";"
    6 constant_defs: constant_defs . ";" "Id" "=" expression

    ";"  shift, and go to state 17


State 12

    1 program: header declarations subprograms . comp_statement "."
   73 subprograms: subprograms . $@1 subprogram ";"

    "Begin"  shift, and go to state 18

    $default  reduce using rule 72 ($@1)

    $@1             go to state 19
    comp_statement  go to state 20


State 13

   36 typedefs: "Type" . type_defs ";"

    "Id"  shift, and go to state 21

    type_defs  go to state 22


State 14

    3 declarations: constdefs typedefs . vardefs

    "Var"  shift, and go to state 23

    $default  reduce using rule 69 (vardefs)

    vardefs  go to state 24


State 15

    8 constant_defs: "Id" error .

    $default  reduce using rule 8 (constant_defs)


State 16

    7 constant_defs: "Id" "=" . expression

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 37
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 17

    4 constdefs: "Const" constant_defs ";" .
    6 constant_defs: constant_defs ";" . "Id" "=" expression

    "Id"  shift, and go to state 41

    $default  reduce using rule 4 (constdefs)


State 18

   88 comp_statement: "Begin" . statements "End"

    "Begin"         shift, and go to state 18
    "If"            shift, and go to state 42
    "While"         shift, and go to state 43
    "Case"          shift, and go to state 44
    "For"           shift, and go to state 45
    "With"          shift, and go to state 46
    "Read"          shift, and go to state 47
    "Write"         shift, and go to state 48
    "Id"            shift, and go to state 49
    "Listfunction"  shift, and go to state 34

    $default  reduce using rule 100 (statement)

    variable         go to state 50
    comp_statement   go to state 51
    statements       go to state 52
    statement        go to state 53
    assignment       go to state 54
    if_statement     go to state 55
    case_statement   go to state 56
    while_statement  go to state 57
    for_statement    go to state 58
    with_statement   go to state 59
    subprogram_call  go to state 60
    io_statement     go to state 61


State 19

   73 subprograms: subprograms $@1 . subprogram ";"

    "Function"   shift, and go to state 62
    "Procedure"  shift, and go to state 63

    subprogram  go to state 64
    sub_header  go to state 65


State 20

    1 program: header declarations subprograms comp_statement . "."

    "."  shift, and go to state 66


State 21

   39 type_defs: "Id" . "=" type_def

    "="  shift, and go to state 67


State 22

   36 typedefs: "Type" type_defs . ";"
   38 type_defs: type_defs . ";" "Id" "=" type_def

    ";"  shift, and go to state 68


State 23

   68 vardefs: "Var" . variable_defs ";"

    error  shift, and go to state 69
    "Id"   shift, and go to state 70

    identifiers    go to state 71
    variable_defs  go to state 72


State 24

    3 declarations: constdefs typedefs vardefs .

    $default  reduce using rule 3 (declarations)


State 25

   19 expression: "Length" . "(" expression ")"

    "("  shift, and go to state 73


State 26

   20 expression: "New" . "(" expression ")"

    "("  shift, and go to state 74


State 27

   18 expression: "Id" . "(" expressions ")"
   24 variable: "Id" .

    "("  shift, and go to state 75

    $default  reduce using rule 24 (variable)


State 28

   30 constant: "Iconst" .

    $default  reduce using rule 30 (constant)


State 29

   31 constant: "Rconst" .

    $default  reduce using rule 31 (constant)


State 30

   32 constant: "Bconst" .

    $default  reduce using rule 32 (constant)


State 31

   33 constant: "Cconst" .

    $default  reduce using rule 33 (constant)


State 32

   15 expression: "+ | -" . expression

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 76
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 33

   16 expression: "Not" . expression

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 77
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 34

   27 variable: "Listfunction" . "(" expression ")"

    "("  shift, and go to state 78


State 35

   22 expression: "(" . expression ")"

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 79
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 36

   34 setlistexpression: "[" . expressions "]"
   35                  | "[" . "]"

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36
    "]"             shift, and go to state 80

    expression         go to state 81
    variable           go to state 38
    expressions        go to state 82
    constant           go to state 39
    setlistexpression  go to state 40


State 37

    7 constant_defs: "Id" "=" expression .
    9 expression: expression . "> | >= | < | <= | <>" expression
   10           | expression . "=" expression
   11           | expression . "In" expression
   12           | expression . "Or" expression
   13           | expression . "+ | -" expression
   14           | expression . "* | / | Mod | Div | And" expression

    "> | >= | < | <= | <>"     shift, and go to state 83
    "+ | -"                    shift, and go to state 84
    "Or"                       shift, and go to state 85
    "* | / | Mod | Div | And"  shift, and go to state 86
    "In"                       shift, and go to state 87
    "="                        shift, and go to state 88

    $default  reduce using rule 7 (constant_defs)


State 38

   17 expression: variable .
   25 variable: variable . "." "Id"
   26         | variable . "[" expressions "]"

    "."  shift, and go to state 89
    "["  shift, and go to state 90

    $default  reduce using rule 17 (expression)


State 39

   21 expression: constant .

    $default  reduce using rule 21 (expression)


State 40

   23 expression: setlistexpression .

    $default  reduce using rule 23 (expression)


State 41

    6 constant_defs: constant_defs ";" "Id" . "=" expression

    "="  shift, and go to state 91


State 42

  104 if_statement: "If" . expression "Then" $@2 statement if_tail
  105             | "If" . expression error

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 92
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 43

  121 while_statement: "While" . expression "Do" $@4 statement

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 93
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 44

  109 case_statement: "Case" . expression "Of" cases case_tail "End"

    "Length"        shift, and go to state 25
    "New"           shift, and go to state 26
    "Id"            shift, and go to state 27
    "Iconst"        shift, and go to state 28
    "Rconst"        shift, and go to state 29
    "Bconst"        shift, and go to state 30
    "Cconst"        shift, and go to state 31
    "+ | -"         shift, and go to state 32
    "Not"           shift, and go to state 33
    "Listfunction"  shift, and go to state 34
    "("             shift, and go to state 35
    "["             shift, and go to state 36

    expression         go to state 94
    variable           go to state 38
    constant           go to state 39
    setlistexpression  go to state 40


State 45

  124 for_statement: "For" . "Id" ":=" iter_space "Do" $@5 statement $@6
  125              | "For" . error

    error  shift, and go to state 95
    "Id"   shift, and go to state 96


State 46

  128 with_statement: "With" . variable "Do" statement

    "Id"            shift, and go to state 97
    "Listfunction"  shift, and go to state 34

    variable  go to state 98


State 47

  131 io_statement: "Read" . "(" read_list ")"

    "("  shift, and go to state 99


State 48

  132 io_statement: "Write" . "(" write_list ")"

    "("  shift, and go to state 100


State 49

   24 variable: "Id" .
  129 subprogram_call: "Id" .
  130                | "Id" . "(" expressions ")"

    "("  shift, and go to state 101

    "End"     reduce using rule 129 (subprogram_call)
    "Else"    reduce using rule 129 (subprogram_call)
    ";"       reduce using rule 129 (subprogram_call)
    $default  reduce using rule 24 (variable)


State 50

   25 variable: variable . "." "Id"
   26         | variable . "[" expressions "]"
  101 assignment: variable . ":=" expression
  102           | variable . ":=" "String"

    "."   shift, and go to state 89
    "["   shift, and go to state 90
    ":="  shift, and go to state 102


State 51

   99 statement: comp_statement .

    $default  reduce using rule 99 (statement)


State 52

   88 comp_statement: "Begin" statements . "End"
   89 statements: statements . ";" statement

    "End"  shift, and go to state 103
    ";"    shift, and go to state 104


State 53
